--- a/EksamenRazorPageFixed/Pages/Members.cshtml
+++ b/EksamenRazorPageFixed/Pages/Members.cshtml
@@ -3,7 +3,20 @@
 @{
 }
 
+<!--Show All Boats-->
+<div class="row">
+    <h3 class="accordion-body text-center">Our Boat</h3>
+    @foreach (var member in Model.Members.Values)
+    {
+        <div class="col-lg-4 card" style="width: 16rem;">
+            <div class="card-body">
+                <h5 class="card-title">@member.Name</h5>
+                <p class="card-text">@member.Email</p>
+                <p class="card-text">@member.City</p>
+                <p class="card-text">@member.Adress</p>
 
+            </div>
+        </div>
+    }
+</div>
 
-
-<h1>Hejsa  her er jeg</h1>
