--- a/EksamenRazorPageFixed/Pages/Blogs.cshtml
+++ b/EksamenRazorPageFixed/Pages/Blogs.cshtml
@@ -2,3 +2,21 @@
 @model EksamenRazorPageFixed.Pages.BlogsModel
 @{
 }
+<!--Show All Blogs-->
+<div class="row">
+    <h3 class="accordion-body text-center">Our Blogs</h3>
+    @foreach (var blog in Model.Blogs.Values)
+    {
+        var imagePath = "/Images/BlogsImages/" + blog.BlogId + ".jpg";
+
+        <div class="col-lg-4 card" style="width: 16rem;">
+            <img src="@imagePath" class="card-img-top" alt="...">  
+            <div class="card-body">
+                <h5 class="card-title">@blog.BlogTitel</h5>
+                <p class="card-text">@blog.Author</p>
+                <p class="card-text">@blog.Date</p>
+                <p class="card-text">@blog.BodyText</p>
+            </div>
+        </div>
+    }
+</div>
