--- a/EksamenRazorPageFixed/Pages/Boats.cshtml
+++ b/EksamenRazorPageFixed/Pages/Boats.cshtml
@@ -16,6 +16,7 @@
                 <p class="card-text">@boat.BoatNumber</p>
                 <p class="card-text">@boat.LastMaintenance</p>
                 <p class="card-text">@boat.Measurements</p>
+                <p class="card-text">@boat.YearOfConstruction</p>
 
 
             </div>
