--- a/EksamenRazorPageFixed/Pages/Blogs.cshtml
+++ b/EksamenRazorPageFixed/Pages/Blogs.cshtml
@@ -12,9 +12,9 @@
         <div class="col-lg-4 card" style="width: 16rem;">
             <img src="@imagePath" class="card-img-top" alt="...">  
             <div class="card-body">
-                <h5 class="card-title">@blog.BlogTitel</h5>
-                <p class="card-text">@blog.Author</p>
-                <p class="card-text">@blog.Date</p>
+                <h5 class="card-title">Title: @blog.BlogTitel</h5>
+                <p class="card-text">Author: @blog.Author.Name</p>
+                <p class="card-text">Publish date: @blog.BlogId</p>
                 <p class="card-text">@blog.BodyText</p>
             </div>
         </div>
