Implemented Sorting. Added perfection in collaboration With Klivan

--- a/EksamenRazorPageFixed/Pages/Blogs.cshtml
+++ b/EksamenRazorPageFixed/Pages/Blogs.cshtml
@@ -14,7 +14,7 @@
             <div class="card-body">
                 <h5 class="card-title">Title: @blog.BlogTitel</h5>
                 <p class="card-text">Author: @blog.Author.Name</p>
-                <p class="card-text">Publish date: @blog.BlogId</p>
+                <p class="card-text">Publish date: @blog.Date</p>
                 <p class="card-text">@blog.BodyText</p>
             </div>
         </div>
