--- a/EksamenRazorPageFixed/Pages/Shared/_Layout.cshtml
+++ b/EksamenRazorPageFixed/Pages/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Admin">Admin</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/SortingBoats">Sorting</a>
+                        </li>
                     </ul>
                 </div>
             </div>
